--- a/index.html
+++ b/index.html
@@ -233,14 +233,19 @@
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
 </script>
 <script id="template-article-tag" type="text/x-handlebars-template">
-  <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  <li><a href="#tag-{{ tag }}"><span>{{ tag }}</span></a></li>
 </script>
 <script id="template-article-author" type="text/x-handlebars-template">
-  <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  <li><a href="#author-{{ author }}"><span>{{ author }}</span></a></li>
 </script>
 <script id="template-tag-cloud-link" type="text/x-handlebars-template">
   {{#each tags}}
-  <li><a class="className">{{ tag }}</a></li>
+  <li><a href="#tag-{{ tag }}" class="{{ className }}">{{ tag }} [{{ count }}]</a></li>
+  {{/each}}
+</script>
+<script id="template-author-cloud-link" type="text/x-handlebars-template">
+  {{#each authors}}
+  <li><a href="#author-{{ author }}" class="{{ className }}">{{ author }} ({{ count }})</a></li>
   {{/each}}
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
